--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,24 @@
 <html>
-
 <head>
-    <title>Cloud Insurance Co - the one with the AI Bot</title>
+    <title>Assurance Service Internet - avec assistant IA</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 </head>
-
 <body class="homePage" onload="checkStatus()">
-
     <div class="container">
         <div class="outline">
             <header>
                 <div class="banner">
                     <div class="titleArea">
                         <div class="logo"><img class="logoImage" src="images/wash/cloud.svg"></div>
-                        <div class="name"><a class="home" href=".">Cloud Insurance Co.</a></div>
+                        <div class="name"><a class="home" href=".">Assurance Service Internet</a></div>
                     </div>
                     <div class="loginArea">
-                        <div class="menu"><a class="menulink" href="./about">About</a></div>
-                        <div id="login" class="menu"><a class="menulink" href="./login">Log In</a></div>
+                        <div class="menu"><a class="menulink" href="./about">A propos</a></div>
+                        <div id="login" class="menu"><a class="menulink" href="./login">Connexion</a></div>
                         <div id="logout" class="menu" style="display:none"><a class="menulink" href="./logout">Logout</a></div>
                         <div id="status "></div>
                     </div>
@@ -31,7 +28,7 @@
             <header>
                 <div class="bannersecond">
                   <div class="sectionTitleArea">
-                    <p class = "tagline">Cloud Insurance Co.</p>
+                    <p class = "tagline">Assurance Service Internet</p>
                   </div
                 </div>
             </header>
@@ -44,9 +41,9 @@
                               <div class="glow">
                                   <img class="tileImage" src="images/HealthHeart.svg ">
                               </div>
-                              <div class="label ">HEALTH</div>
+                              <div class="label ">SANTE</div>
                               <div>
-                                <button class="tileButton">View Benefits</button>
+                                <button class="tileButton">Voir prestation</button>
                               </div>
                           </a>
                       </div>
@@ -57,7 +54,7 @@
                               </div>
                               <div class="label">AUTO</div>
                               <div>
-                                <button class="tileButton" disabled>Coming Soon</button>
+                                <button class="tileButton" disabled>Prochainnement</button>
                               </div>
                           </a>
                       </div>
@@ -66,9 +63,9 @@
                                 <div class="glow">
                                     <img class="tileImage" src="images/Home.svg ">
                                 </div>
-                                <div class="label">HOME</div>
+                                <div class="label">HABITATION</div>
                                 <div>
-                                  <button class="tileButton" disabled>Coming Soon</button>
+                                  <button class="tileButton" disabled>Prochainnement</button>
                                 </div>
                             </a>
                         </div>
@@ -77,9 +74,9 @@
                               <div class="glow">
                                   <img class="tileImage" src="images/travel.svg ">
                               </div>
-                              <div class="label">TRAVEL</div>
+                              <div class="label">VOYAGE</div>
                               <div>
-                                <button class="tileButton" disabled>Coming Soon</button>
+                                <button class="tileButton" disabled>Prochainnement</button>
                               </div>
                             </a>
                         </div>
@@ -89,24 +86,23 @@
                     <div id = "askWatson" class = "askWatson" style="display:none">
                       <a href="./health">
                         <img src = "images/Watson_Avatar.svg" height = "60px" class = "watsonLogo"/>
-                        <span>Need help? Ask our intelligent policy bot</span>
+                        <span>Besoin d'aide ? Demandez à notre Bot 'police intelligente'</span>
                       </a>
                       <hr>
                     </div>
-
-                    <div class="welcome"><strong>Cloud Insurance Co.</strong> is a conceptual insurance site built using <a href="https://www.ibm.com/cloud/" target= "_blank">IBM Cloud</a> and <a href="https://www.ibm.com/watson/">IBM Watson</a>. <br />
-                        None of the policies are real ... the site exists to experiment and showcase cognitive and cloud computing ideas in the context of insurance.</p>
+                    <div class="welcome"><strong>Assurance Service Internet</strong> est une preuve de concept contruite en utilisant <a href="https://www.ibm.com/cloud/" target= "_blank">IBM Cloud</a> et les services  <a href="https://www.ibm.com/watson/">IBM Watson</a>. <br />
+                        Aucun service proposé n'est réel ... Ce site existe pour experimenter et démonstrer les services Cloud & Cognitifs dans un contexte d'asurance.</p>
                     </div>
                 </div>
             </section>
             <!-- layout section -->
         </div>
     </div>
-
 </body>
 
 <script src="src/cloudco.js"></script>
 <script>
+/*
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function () {
@@ -121,6 +117,6 @@
 
     ga('create', 'UA-77345475-1', 'auto');
     ga('send', 'pageview');
+*/
 </script>
-
 </html>
