--- a/public/claims.html
+++ b/public/claims.html
@@ -1,7 +1,6 @@
 <html>
-
 <head>
-    <title>Cloud Insurance Co - the one with the AI Bot</title>
+    <title>Assurance Service Internet - avec assistant IA</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,17 +8,12 @@
     <link rel="stylesheet" href="/stylesheets/claims.css">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-
-
     <!-- Core  -->
     <!--
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 -->
-
-
 </head>
-
 <body class="homePage" onload="getClaims()">
 
     <div class="container">
@@ -29,13 +23,13 @@
                     <div class="titleArea">
 
                         <div class="logo"><img class="logoImage" src="images/wash/cloud.svg"></div>
-                        <div class="name"><a class="home" href=".">Cloud Insurance Co.</a></div>
+                        <div class="name"><a class="home" href=".">Assurance Service Internet</a></div>
 
                     </div>
                     <div class="loginArea">
-                        <div class="menu"><a class="menulink" href="./about">About</a></div>
+                        <div class="menu"><a class="menulink" href="./about">A propos</a></div>
                         <div id="login" class="menu"><a class="menulink" href="./login">Log In</a></div>
-                        <div id="logout" class="menu"><a class="menulink" href="./logout">Logout</a></div>
+                        <div id="logout" class="menu"><a class="menulink" href="./logout">Déconnexion</a></div>
                         <div id="status "></div>
                     </div>
                     <a href = "https://github.com/IBM-Cloud/cloudco-insurance"><img height="25px" src = "images/github.svg"/></a>
@@ -45,18 +39,18 @@
                 <div style="margin:40px;">
                     <div class="benefitkit">
                         <div class="claimhistory">
-                            <div id="header" class="header">Claim history</div>
+                            <div id="header" class="header">Historique dossier</div>
                             <div id="owner" class="owner"></div>
                             <div class="claimheader">
                                 <div class="marker">
                                     <!--                                    <div class="bullet"></div>-->
                                 </div>
-                                <div class="category">BENEFIT</div>
-                                <div class="category">PROVIDER</div>
+                                <div class="category">PRESTATION</div>
+                                <div class="category">FOURNISSEUR</div>
                                 <div class="centereddata">DATE</div>
-                                <div class="centereddata">OUTCOME</div>
-                                <div class="financeclaimdata">CLAIM</div>
-                                <div class="financeclaimdata">PAYMENT</div>
+                                <div class="centereddata">RESULTAT</div>
+                                <div class="financeclaimdata">DOSSIER</div>
+                                <div class="financeclaimdata">PAIEMENT</div>
                             </div>
                             <div class="claimlist" id="claimlist">
                             </div>
