--- a/public/login.html
+++ b/public/login.html
@@ -1,39 +1,31 @@
 <html>
 
 <head>
-    <title>Cloud Insurance Co - the one with the AI Bot</title>
+    <title>Assurance Service Internet - avec assistant IA</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-
-
     <!-- Core  -->
     <!--
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 -->
-
-
 </head>
-
 <body class="homePage">
-
     <div class="container">
         <div class="outline">
             <header>
                 <div class="banner">
                     <div class="titleArea">
-
                         <div class="logo"><img class="logoImage" src="images/wash/cloud.svg"></div>
-                        <div class="name"><a class="home" href=".">Cloud Insurance Co.</a></div>
-
+                        <div class="name"><a class="home" href=".">Assurance Service Internet</a></div>
                     </div>
                     <div class="loginArea">
-                        <div class="menu"><a class="menulink" href="./about">About</a></div>
+                        <div class="menu"><a class="menulink" href="./about">A propos</a></div>
                         <div class="menu">
-                            <a class="menulink" onclick="showMenu()">Log In</a>
+                            <a class="menulink" onclick="showMenu()">Connection</a>
                         </div>
                         <div id="status "></div>
                     </div>
@@ -46,14 +38,15 @@
                         <div class="loginform">
                             <div class="loginfield">
                                 <img src="images/username.svg" class="icon">
-                                <input id="email" class="logininput" type="text" name="email" placeholder="E-mail address" onkeypress="return newEvent(event,'login')">
+                                <input id="email" class="logininput" type="text" name="email" placeholder="Adresse E-mail" onkeypress="return newEvent(event,'login')">
                             </div>
                             <div class="loginfield">
                                 <img src="images/password.svg" class="icon">
-                                <input id="password" class="logininput" type="password" name="password" placeholder="Password"  onkeypress="return newEvent(event,'login')">
+                                <input id="password" class="logininput" type="password" name="password" placeholder="Mot de passe"  onkeypress="return newEvent(event,'login')">
                             </div>
-                            <button class="loginbutton" onclick="login()">Log In</button>
-                            <div class="loginnew"><a class="signuplink" href="./signup">Add a new account</a></div>
+                            <button class="loginbutton" onclick="login()">Connexion</button>
+                            <div class="loginnew"><a class="signuplink" href="./signup">S'inscrire</a></div>
+                            <div class="loginnew"><a class="signuplink" href="./forgot_password">Mot de passe oublié</a></div>
                         </div>
                     </div>
                 </div>
@@ -61,9 +54,6 @@
             </section>
         </div>
     </div>
-
 </body>
-
 <script src="src/cloudco.js "></script>
-
 </html>
