--- a/public/signup.html
+++ b/public/signup.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Cloud Insurance Co - the one with the AI Bot</title>
+<title>Assurance Service Internet - avec assistant IA</title>
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,12 +22,12 @@
             <div class="banner">
                 <div class="titleArea">
                     <div class="logo"><img class="logoImage" src="images/wash/cloud.svg"></div>
-                    <div class="name"><a class="home" href=".">Cloud Insurance Co.</a></div>
+                    <div class="name"><a class="home" href=".">Assurance Service Internet</a></div>
                 </div>
                 <div class="loginArea">
-                    <div class="menu"><a class="menulink" href="./about">About</a></div>
+                    <div class="menu"><a class="menulink" href="./about">A propos</a></div>
                     <div class="menu">
-                        <div class="menulink" onclick="showMenu()">Log In</div>
+                        <div class="menulink" onclick="showMenu()">Connexion</div>
                     </div>
                     <div id="status "></div>
                 </div>
@@ -38,19 +38,19 @@
                 <div class="loginbox">
                     <div class="loginform">
                         <div class="loginfield"> <img src="images/username.svg" class="icon">
-                            <input id="fname" class="logininput" type="text" name="fname" placeholder="First Name">
+                            <input id="fname" class="logininput" type="text" name="fname" placeholder="Prénom">
                         </div>
                         <div class="loginfield"> <img src="images/username.svg" class="icon">
-                            <input id="lname" class="logininput" type="text" name="lname" placeholder="Last Name">
+                            <input id="lname" class="logininput" type="text" name="lname" placeholder="Nom">
                         </div>
                         <div class="loginfield"> <img src="images/username.svg" class="icon">
-                            <input id="email" class="logininput" type="email" name="email" placeholder="E-mail address">
+                            <input id="email" class="logininput" type="email" name="email" placeholder="Addresse E-mail">
                         </div>
                         <div class="loginfield"> <img src="images/password.svg" class="icon">
-                            <input id="password" class="logininput" type="password" name="password" placeholder="8 characters minimum">
+                            <input id="password" class="logininput" type="password" name="password" placeholder="8 caractères minimum">
                         </div>
-                        <button class="loginbutton" onclick="register()">Sign Up</button>
-                        <div class="loginnew"><a class="signuplink" href="./login">Existing account?</a></div>
+                        <button class="loginbutton" onclick="register()">S'inscrire</button>
+                        <div class="loginnew"><a class="signuplink" href="./login">Compte existant ?</a></div>
                     </div>
                 </div>
             </div>
