soon.html -> fr

--- a/public/soon.html
+++ b/public/soon.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Cloud Insurance Co - the one with the AI Bot</title>
+    <title>Assurance Service Internet - avec assistant IA</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,13 +27,13 @@
                     <div class="titleArea">
 
                         <div class="logo"><img class="logoImage" src="images/wash/cloud.svg"></div>
-                        <div class="name"><a class="home" href=".">Cloud Insurance Co.</a></div>
+                        <div class="name"><a class="home" href=".">Assurance Service Internet</a></div>
 
                     </div>
                     <div class="loginArea">
-                        <div class="menu"><a class="menulink" href="./about">About</a></div>
+                        <div class="menu"><a class="menulink" href="./about">A propos</a></div>
                         <div class="menu">
-                            <div class="menulink" onclick="showMenu()">Log In</div>
+                            <div class="menulink" onclick="showMenu()">Connexion</div>
                         </div>
                         <div id="status "></div>
                     </div>
@@ -41,8 +41,8 @@
                 </div>
             </header>
             <section class="layout ">
-                <div style="margin:100px;text-align:center;">FUTURE WATSON AND IBM CLOUD INSURANCE EXAMPLE
-                    <p><strong>TRY HEALTH SERVICES FOR NOW</strong></p>
+                <div style="margin:100px;text-align:center;">PROCHAIN EXEMPLE WATSON POUR ASSURANCE SERVICE INTERNET
+                    <p><strong>ESSAYEZ MAINTENANT LE SERVICE SANTE</strong></p>
                 </div>
             </section>
         </div>
