claims.html -> fr

--- a/public/claims.html
+++ b/public/claims.html
@@ -44,10 +44,10 @@
                                 </div>
                                 <div class="category">PRESTATION</div>
                                 <div class="category">FOURNISSEUR</div>
-                                <div class="centereddata">DATE</div>
-                                <div class="centereddata">STATUT</div>
-                                <div class="financeclaimdata">PAYE</div>
-                                <div class="financeclaimdata">REMBOURSE</div>
+                                <div class="centereddataH">DATE</div>
+                                <div class="centereddataH">DOSSIER</div>
+                                <div class="financeclaimdataH">PAYÉ</div>
+                                <div class="financeclaimdataH">REMBOURSÉ</div>
                             </div>
                             <div class="claimlist" id="claimlist">
                             </div>
