login.html -> psw reset

--- a/public/login.html
+++ b/public/login.html
@@ -46,7 +46,10 @@
                             </div>
                             <button class="loginbutton" onclick="login()">Connexion</button>
                             <div class="loginnew"><a class="signuplink" href="./signup">S'inscrire</a></div>
+<!--
                             <div class="loginnew"><a class="signuplink" href="./forgot_password">Mot de passe oublié</a></div>
+-->
+                            <div class="loginnew"><a class="signuplink" href="https://appid-oauth.eu-de.bluemix.net/oauth/v3/3a013bb5-2ac7-449f-a413-df0a6274aaad/cloud_directory/forgot_password?client_id=0d1f1a55-00cc-44dd-a4ac-30daafe70697&redirect_uri=https://insurance-toolchain-20180823070712654-webui.eu-de.mybluemix.net/forgot_password">Mot de passe oublié</a></div>
                         </div>
                     </div>
                 </div>
